<?php

namespace App\Enums;

enum BriefType: string {
    case INDIVIDUAL = 'individual';
    case COLLECTIVE = 'collective';
}