<?php

namespace App\Enums;

enum UserRole: string {
    case ADMIN = 'ADMIN';
    case TEACHER = 'TEACHER';
    case STUDENT = 'STUDENT';
}